welcome.lessons.welcome.bat.bool2.TwoAsOne.scala.error
twoAsOne:2: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (a + b == c || a + c = b || c + b = a) {
                       ^